# OpenGL

./: .gitignore  CMakeLists.txt  README.md  Todo.txt
Assets/Models/: ShaderBall.fbx  ShaderBall2.fbx
Assets/Shaders/: color.frag  common.glsl  copy.frag  forward.frag  forward.vert  fullscreen.vert  gbuffer.frag  gbuffer.vert  simple.vert  test.frag  test.vert
Engine/: CMakeLists.txt  base_renderer.cpp  base_renderer.hpp  buffer.cpp  buffer.hpp  debug.hpp  engine.cpp  engine.hpp  entity.cpp  errors.hpp  framebuffer.cpp  framebuffer.hpp  image.cpp  image.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  object.cpp  object.hpp  program.cpp  program.hpp  template.hpp  texture.cpp  texture.hpp  utils.hpp
Game1/: App.cpp  App.hpp  CMakeLists.txt  camera.cpp  camera.hpp  input.cpp  input.hpp  main.cpp
Game1/Shapes/: Cylinder.cpp  Cylinder.hpp  ShapeFactory.cpp  ShapeFactory.hpp
external_src/imgui-1.60/: CMakeLists.txt
